1997-11-28  Tim Pierce  <twp@skepsis.com>

	* boot-9.scm (find-and-link-dynamic-module): If a .la file
	(libtool support file) is found in a module directory, attempt to
 	extract the shared library name from that file.  If the .la file
	does not exist, try to link against a .so file.  Libtool-generated
	compiled modules should load more cleanly in Guile now.
	(try-using-libtool-name, try-using-sharlib-name): New functions.

Sun Nov  9 06:10:59 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (set-batch-mode?!, batch-mode?): initialize more
	usefully so they will work from a script.

1997-10-31  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (inherit-print-state): Moved definition to the
	neighborhood of the record code.

Mon Oct 27 02:05:49 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* boot-9.scm: Revert changes to this file from Oct 23.  It turns
 	out to interact badly with the Emacs support and the Tcl/Tk
 	support.  It's not a high enough priority at the moment to be
 	worth fixing.  I'm leaving the other readline support in, though.

Sat Oct 25 14:23:22 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.am: Include readline.scm in the list of files to be
	installed, so Guile can find it for interactive use.
	* Makefile.in: Regenerated.

Thu Oct 23 01:00:33 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	Add support for readline function.
	* readline.scm: New module.
	* boot-9.scm (repl-reader): New function.
	(scm-style-repl): Call repl-reader, instead of doing the reading
	ourselves.  Remove repl-report-reset; it was never used for
	anything.
	(top-repl): If we've got the readline primitives, then redefine
	repl-reader to use them.
	If we've got the readline primitives, import the readline module.

	* ls.scm (ls, lls): Don't assume (eq? #f '()).

Wed Oct 22 18:26:57 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* calling.scm, common-list.scm, ls.scm, q.scm, runq.scm,
	string-fun.scm: Added copyright notices; reformatted.
