@@ -1,3 +1,8 @@
+Sat Nov 29 01:24:46 1997  Mikael Djurfeldt  <mdj@kenneth>
+
+	* boot-9.scm (error-catching-loop, save-stack): `the-last-stack'
+	is now a fluid.
+
 1997-11-28  Tim Pierce  <twp@skepsis.com>
 
 	* boot-9.scm (find-and-link-dynamic-module): If a .la file
